--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
 	<title>Simple Expenses App</title>
 	<script src="js/angular.min.js"></script>
 	<script src="js/app.js"></script>
 	<style href="css/bootstrap.min.css"></style>
 </head>
-<body>
-
+<body >
+	<div ng-controller="mainController">
+		<h1>{{title}}</h1>
+		<table>
+			<tr>
+				<th>Description</th>
+				<th>Amount</th> 
+			</tr>
+			<tr>
+				<td>{{expense.description}}</td>
+				<td>{{expense.amount}}</td>
+			</tr>
+			<tr>
+				<button ng-click="increaseAmount()">Increase Amount</button>
+			</tr>
+		</table>
+	</div>
 	
 </body>
 </html>
